# rat_attack

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  cache_allow_test.txt  flake.nix  justfile  no_policy_test.txt  test_always.txt  test_cache.txt  test_execution_order.txt
ct-web/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ct-web/src/components/: BridgeSwitcher.test.tsx  BridgeSwitcher.tsx
planner/: general_prompt.md  human.md  main_prompt.md  progress.md  spec.md
planner/docs/: zed_acp.md  zed_acp_agent_launching.md  zed_acp_debugging.md  zed_acp_extensibility.md  zed_acp_login.md  zed_acp_mcp_integration.md  zed_acp_premissions.md  zed_acp_session_management.md  zed_acp_tools.md  zed_acp_ui.md
planner/notes/: 001.md  002.md  003_code.md  003_test.md  004_code.md  004_test.md  005A_test.md  005_code.md  005_test.md  006_code.md  006_test.md  007_code.md  007_test.md  008_code.md  008_test.md  009_code.md  009_test.md  016_code.md  016_test.md
planner/prompts/: 001_code.md  001_test.md  002_code.md  002_test.md  003_code.md  003_test.md  004_code.md  004_test.md  005A_code.md  005A_test.md  005_code.md  005_test.md  006_code.md  006_test.md  007_code.md  007_test.md  008_code.md  008_test.md  009_code.md  009_test.md  011_code.md  011_test.md  012_code.md  012_test.md  013_code.md  013_test.md  014_code.md  014_test.md  015_code.md  015_test.md  016_code.md  016_test.md  017_code.md  017_test.md
src/: lib.rs  main.rs
tests/: bridge_handshake.rs  fs_test_file.md  ws_upgrade.rs
