[package]
name = "ct-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-client-protocol = "0.4.0"
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "process"] }
tokio-tungstenite = "0.21"
which = "4.4"
portable-pty = "0.8"

[dev-dependencies]
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
futures-util = "0.3"
serde_json = "1"
serial_test = "3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "process"] }
url = "2"
